--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@tailwindcss/typography": "^0.5.12",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.1",
